--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,7 @@
+# Delete this when RTD supports poetry
+# See https://github.com/readthedocs/readthedocs.org/issues/4912
 sphinx
 sphinx-rtd-theme
 sphinx-autodoc-typehints
+nornir
+routeros-api
