--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ name: CI
     branches:
       - master
       - devel
+  pull_request:
 
 jobs:
   lint:
@@ -79,7 +80,6 @@ jobs:
         with:
           python-version: 3.8
 
-
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -111,4 +111,9 @@ jobs:
 
       - name: Run pytest
         run: |
-          poetry run pytest
+          poetry run pytest --cov=./nornir_routeros --cov-report=xml --cov-branch
+
+      - name: Upload coverage to codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
