--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 [tool.poetry.dependencies]
 python = "^3.6"
 RouterOS-api = "^0.17.0"
-Jinja2 = "^2.11.2"
+Jinja2 = "^2.11.2|^3.0"
 pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
