--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ nornir = "^3.0.0"
 pytest = "^6.2.5"
 flake8 = "^4.0.1"
 black = { version = "^22.6.0", python = "^3.7" }
+isort = { version = "^5.10.0", python = "^3.7" }
+flake8-isort = "^4.1.1"
 
 [tool.poetry.plugins."nornir.plugins.connections"]
 "routerosapi" = "nornir_routeros.plugins.connections:RouterOsApi"
@@ -26,3 +28,6 @@ black = { version = "^22.6.0", python = "^3.7" }
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
