--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,18 @@ jobs:
         run: poetry run make html SPHINXOPTS="-n"
 
   tests:
-    runs-on: macos-10.15
+    runs-on: ubuntu-latest
+    services:
+      routeros:
+        image: ghcr.io/devon-mar/docker-routeros:7.3.1
+        ports:
+          - 2222:22
+          - 8728:8728
+          - 8729:8729
+        volumes:
+          - /dev/net/tun:/dev/net/tun
+        options: >-
+          --cap-add=NET_ADMIN
     steps:
       - uses: actions/checkout@v2
 
@@ -100,16 +111,9 @@ jobs:
         run: poetry install
         if: steps.cache-poetry-dependencies.outputs.cache-hit != 'true'
 
-      - name: Restore Vagrant boxes from cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.vagrant.d/boxes
-          key: ${{ runner.os }}-vagrant-${{ hashFiles('**/Vagrantfile') }}
-
-      - name: Vagrant up
-        working-directory: ./tests
-        run: |
-          vagrant up
+      - name: Setup the router
+        run:
+          tests/ros_setup.sh
 
       - name: Run pytest
         run: |
