--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -2,8 +2,8 @@
 # With SSL
 router1:
   hostname: 127.0.0.1
-  username: vagrant
-  password: vagrant
+  username: admin
+  password: ""
   connection_options:
     routerosapi:
       extras:
