--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,7 +126,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          poetry run pytest --cov=./nornir_routeros --cov-report=xml --cov-branch
+          poetry run pytest -vv --cov=./nornir_routeros --cov-report=xml --cov-branch
 
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v3
