--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,7 @@ sphinx-autodoc-typehints = "^1"
 nornir = "^3"
 pytest = "^7"
 pytest-cov = "^4"
-flake8 = "^4"
-black = { version = "^22", python = "^3.7" }
-isort = { version = "^5", python = "^3.7" }
-flake8-isort = "^4"
+ruff = { version = "^0.4", python = "^3.7" }
 
 [tool.poetry.plugins."nornir.plugins.connections"]
 "routerosapi" = "nornir_routeros.plugins.connections:RouterOsApi"
@@ -29,6 +26,3 @@ flake8-isort = "^4"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
