--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,10 @@ name: CI
   pull_request:
 
 env:
-  PYTHON_VERSION: "3.12"
+  # Python 3.12 doesn't work
+  # since setuptools is no longer installed in venvs.
+  # Need to wait for Nornir to add it as an explicit dependency.
+  PYTHON_VERSION: "3.11"
 
 jobs:
   lint:
@@ -28,10 +31,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+        run: pipx install poetry
 
       - name: Load cached venv
         id: cache-poetry-dependencies
