--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,15 +72,14 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: poetry
 
-      - name: Run poetry install
-        run: poetry install
-
       - name: Setup the router
         run: tests/ros_setup.sh
 
+      - name: Run poetry install
+        run: poetry install
+
       - name: Run pytest
-        run: |
-          poetry run pytest -vv --cov=./nornir_routeros --cov-report=xml --cov-branch
+        run: poetry run pytest
 
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v4
