--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: chartboost/ruff-action@v1
+
+      - uses: chartboost/ruff-action@v1
+        with:
+          args: format --check
   docs:
     runs-on: ubuntu-latest
     steps:
