--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,40 @@ ruff = { version = "^0.4", python = "^3.7" }
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = 20
+
+[tool.ruff.lint]
+select = [
+  "C4",
+  "E",
+  "EXE",
+  "F",
+  "I",
+  "ISC",
+  "PERF",
+  "PIE",
+  "PYI",
+  "UP",
+  "W",
+]
+ignore = [
+  "E501",
+  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
+  "W191",
+  "E111",
+  "E114",
+  "E117",
+  "D206",
+  "D300",
+  "Q000",
+  "Q001",
+  "Q002",
+  "Q003",
+  "COM812",
+  "COM819",
+  "ISC001",
+  "ISC002",
+]
