--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-  "sphinx~=4.0",
-  "sphinx-rtd-theme~=1.0",
-  "sphinx-autodoc-typehints~=1.0",
+  "sphinx~=8.0; python_version >= '3.10'",
+  "sphinx-rtd-theme~=3.0; python_version >= '3.10'",
+  "sphinx-autodoc-typehints~=3.0; python_version >= '3.10'",
   "nornir~=3.5.0",
   "pytest~=7.0",
-  "pytest-cov~=5.0; python_version >= '3.8'",
-  "ruff~=0.4.0; python_version >= '3.7'",
+  "pytest-cov~=6.0",
+  "ruff~=0.9.0",
   ]
 
 
